Bug 470806 - Alternatives popup deletes old applet but never creates new one
Summary: Alternatives popup deletes old applet but never creates new one
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-06-08 20:11 UTC by Nate Graham
Modified: 2023-06-09 07:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-06-08 20:11:44 UTC
When using it to switch to an alternative applet, the old applet disappears, but the selected new one is never created. Console log shows the following output when it happens, which looks extremely suspicious:

Jun 08 14:09:25 Liberator plasmashell[676561]: QMetaObject::invokeMethod: No such method ContainmentInterface_QML_159::createApplet(QString,QVariantList,QPoint)
                                               Candidates are:
                                                   createApplet(QString,QVariantList,QRectF)
Comment 1 Marco Martin 2023-06-09 07:34:20 UTC
Git commit 57c219daa04a25cbd26dec99786c4c67b82dc85e by Marco Martin.
Committed on 09/06/2023 at 07:32.
Pushed by mart into branch 'master'.

Adapt to api changes

ContainmentItem createApplet with a qpoint parameter is gone
use now the proper containment api, removing usage of invokemethod
making it much more robust

M  +1    -7    shell/alternativeshelper.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/57c219daa04a25cbd26dec99786c4c67b82dc85e