Adapt to api changes

ContainmentItem createApplet with a qpoint parameter is gone
use now the proper containment api, removing usage of invokemethod
making it much more robust
BUG:470806